// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Row Basic 1`] = `
<div
  className="flex items-start space-x-1"
>
  <button
    className=""
  >
    button 1
  </button>
  <button
    className=""
  >
    button 2
  </button>
  <button
    className=""
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Row Custom Gutter 1`] = `
<div
  className="flex items-start space-x-5"
>
  <button
    className=""
  >
    button 1
  </button>
  <button
    className=""
  >
    button 2
  </button>
  <button
    className=""
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Row Spaced 1`] = `
<div
  className="flex items-start justify-between w-full space-x-1"
>
  <button
    className=""
  >
    button 1
  </button>
  <button
    className=""
  >
    button 2
  </button>
  <button
    className=""
  >
    button 3
  </button>
</div>
`;
